--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <meta name="description" content="Live Ticker" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Ticker</title>
   </head>
