--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,22 @@
     <meta name="description" content="Live Ticker" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/png" href="/Icon_32.png" sizes="32*32" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/Icon_32.png"
+      sizes="32*32"
+    />
+    <meta property="og:title" content="One Trade Chart" />
+    <meta
+      property="og:description"
+      content="Advanced trading chart realtime analysis"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/Icon_32.png" />
+    <meta
+      property="og:url"
+      content="http://saiprasadmedishetti.github.io/ticker"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
